--- a/css/newstyles.css
+++ b/css/newstyles.css
@@ -5,7 +5,7 @@ body {
   background-size: cover;
   height: 100vh;
   background-repeat: no-repeat;
-
+  background-attachment: fixed;
 }
 
 .menu {
@@ -45,7 +45,8 @@ body {
 	line-height: 50px;
 }
 
-.projects {
+.projects,
+.contact {
 	display: none;
 }
 
@@ -57,10 +58,24 @@ body {
 .projects-container div {
 	width: 48%;
 	text-align: center;
-	background-color: lightgreen;
+	background-color: rgba(255, 255, 255, 0.8);
+	border-radius: 14px;
 	margin: 10px;
 }
 
 .resume {
 	display: none;
+}
+
+.contact div {
+	text-align: center;
+}
+
+.contact-icons {
+	display: flex;
+	justify-content: space-around;
+	width: 60%;
+	margin-left: auto;
+	margin-right: auto;
+	margin-top: 2%; 	
 }
