added all project cards and active class

--- a/css/newstyles.css
+++ b/css/newstyles.css
@@ -30,6 +30,10 @@ body {
 	background-color: #cc9753;
 }
 
+.active {
+	background-color: #cc9753 !important;	
+}
+
 .bio-body {
 	width: 75%;
 	margin-left: auto;
