--- a/css/newstyles.css
+++ b/css/newstyles.css
@@ -67,8 +67,34 @@ body {
 	margin: 10px;
 }
 
+.project-links {
+	display: flex;
+	justify-content: space-around;
+	margin-left: auto !important;
+	margin-right: auto !important;
+	font-size: 1.5em;
+}
+
+.project-links a {
+	text-decoration: none;
+}
+
 .resume {
 	display: none;
+	text-align: center;
+}
+
+.resume h1 {
+	color: white;
+}
+
+.view-resume {
+	background-color: rgba(255, 255, 255, 0.8);
+	width: 17%;
+	margin-left: auto;
+	margin-right: auto;
+	padding: 1px;
+	border-radius: 8px;
 }
 
 .contact div {
