updated tablet and mobile views

--- a/css/newstyles.css
+++ b/css/newstyles.css
@@ -44,12 +44,23 @@ a {
 
 .active {
 	background-color: #577539 !important;	
-	color: white;
+	color: white !important;
+}
+
+.bio {
+	display: flex;
+	margin-left: auto;
+	margin-right: auto;
+	width: 91%;
+}
+
+.profile-pic {
+	margin-right: 20px;
+	margin-top: 20px;
 }
 
 .bio-body {
-	width: 75%;
-	margin-left: auto;
+	margin-left: 20px;
 	margin-right: auto;
 	margin-top: 10%;
 	border-radius: 14px;
@@ -139,10 +150,6 @@ a {
 	text-align: center;
 }
 
-.contact h1 {
-	color: white;
-}
-
 .contact-icons {
 	display: flex;
 	justify-content: space-around;
@@ -152,7 +159,22 @@ a {
 	margin-top: 2%; 	
 }
 
-@media (min-width: 320px) and (max-width: 768px) {
+@media (min-width: 320px) and (max-width: 767px) {
+	.bio {
+		flex-direction: column;
+	}
+
+	.profile-pic {
+		margin-top: 0;
+		margin-left: auto;
+		margin-right: auto;
+	}
+
+	.bio-body {
+		margin-left: 0;
+		margin-right: 0;
+	}
+
 	.bio-body p {
 		font-size: 1.25em;
 		line-height: 30px;
@@ -162,9 +184,9 @@ a {
 		width: 95%;
 	}
 
-	./*projects-container img {
-		width: 90%;
-	}*/
+	.mockup {
+		width: 100%;
+	}
 
 	.view-resume {
 		width: 55%;
@@ -180,6 +202,12 @@ a {
 }
 
 @media (min-width: 768px) and (max-width: 1023px) {
+	/*.profile-pic {
+		margin-top: 0;
+		margin-left: auto;
+		margin-right: auto;
+	}*/
+
 	.bio-body {
 		margin-top: 4%;
 	}
@@ -188,8 +216,8 @@ a {
 		margin-top: 10px;
 	}
 
-	.projects-container div {
-		width: 86%;
+	.projects-container .project {
+		width: 95%;
 		margin-left: auto;
 		margin-right: auto;
 	}
