--- a/css/newstyles.css
+++ b/css/newstyles.css
@@ -1,7 +1,7 @@
 body {
 	margin: 0; 
   /*overflow-y: hidden;*/
-  background: url('https://i.imgur.com/0m4RNzo.jpg');
+  background: url('https://cdn.pixabay.com/photo/2018/02/19/00/14/tree-3163913_960_720.jpg');
   background-size: cover;
   height: 100vh;
   background-repeat: no-repeat;
@@ -64,12 +64,13 @@ a {
 }
 
 .bio-body {
-	margin-left: 20px;
+	margin-left: auto;
 	margin-right: auto;
 	margin-top: 10%;
 	border-radius: 14px;
 	background-color: rgba(255, 255, 255, 0.8);
 	padding: 20px;
+	width: 76%;
 }
 
 .bio-body p {
