--- a/css/newstyles.css
+++ b/css/newstyles.css
@@ -32,9 +32,47 @@ body {
 	width: 76%;
 }
 
+.bio-body-1 {
+	display: flex;
+}
+
+.bio-body img {
+	align-self: center;
+	width: 25%;
+}
+
 .bio-body p {
-	font-size: 1.75em;
-	line-height: 50px;
+	font-size: 1.15em;
+	line-height: 37px;
+	align-self: center;
+	margin-right: 3%;
+    text-align: justify;
+}
+
+.bio-body-2 {
+	display: flex;
+}
+
+.bio-body-2 .icare {
+	width: 16%;
+	margin-left: 4%;
+}
+
+.bio-para-2 {
+	margin-left: 5%;
+}
+
+.bio-body-3 {
+	display: flex;
+}
+
+.bio-body-3 .android {
+	width: 20%;
+	margin-left: 2%;
+}
+
+.bio-para-3 {
+	margin-left: 3%;
 }
 
 .projects,
@@ -54,8 +92,20 @@ body {
 	margin: 10px;
 }
 
+.project-3 .mockup {
+	margin-top: 9%;
+}
+
+.project-3 .btn {
+	margin-top: 8%;
+}
+
 .project img {
 	margin-bottom: 10px;
+}
+
+.mockup {
+	width: 100%;
 }
 
 .proj-link {
@@ -139,8 +189,25 @@ body {
 		margin-right: 0;
 	}
 
+	.bio-body-1,
+	.bio-body-2,
+	.bio-body-3 {
+		flex-direction: column;
+	}
+
+	.bio-body-1 img,
+	.bio-body-2 img,
+	.bio-body-3 img {
+		width: 60% !important;
+	}
+
+	.bio-body .icare,
+	.bio-body .android {
+		margin-top: 25%;
+	}
+
 	.bio-body p {
-		font-size: 1.25em;
+		font-size: 1em;
 		line-height: 30px;
 	}
 
@@ -178,6 +245,25 @@ body {
 
 	.bio-body {
 		margin-top: 4%;
+	}
+
+	.bio-body-1,
+	.bio-body-2,
+	.bio-body-3 {
+		flex-direction: column;
+	}
+
+	.bio-body p {
+		font-size: 1.55em;
+	}
+
+	.bio-body img {
+		width: 31% !important;
+	}
+
+	.bio-body .icare,
+	.bio-body .android {
+		margin-top: 12%;
 	}
 
 	.projects-container {
